--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script language="javascript" type="text/javascript" src="z_training_images.js"></script>
     <script language="javascript" type="text/javascript" src="z_testing_images.js"></script>
     <script language="javascript" type="text/javascript" src="face.js"></script>
+    <script language="javascript" type="text/javascript" src="wave.js"></script>
     <script language="javascript" type="text/javascript" src="system_runner.js"></script>
     <meta name="referrer" content="no-referrer">
     <style>
@@ -141,6 +142,7 @@
         <div>
             <div id="canvasContainer"></div>
 <a href="face.js">face code</a><br>
+<a href="wave.js">wave anim code</a><br>
 <a href="sketch.html">sketches</a>
         </div>
     </div>
